# rust-web-template

./: Cargo.toml  README.md  default.env
src/: main.rs
