[package]
name = "rust-web-template"
version = "0.1.0"
authors = ["shishirtandale <shishir@tandale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix - Web application
actix-web = "2"
actix-rt = "1"
# DB
diesel = { version = "1.3.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
# Logging and Error Handling
log = "0.4.0"
env_logger = "0.7"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Environment
dotenv = "0.15.0"
